# LEAP

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  INSTRUCTIONS.md  Makefile  README.md  README_MAIN.md  README_conf.md  ROADMAP.md  THUMBNAIL_CLEANUP_COMPLETE.md  TOPICS_DISPLAY_UPDATE.md  VERIFICATION_ISSUES.md  WHAT_WAS_DONE.md  clean_info.md  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  logger.py  pyproject.toml  requests  requirements.txt  ruff.toml
alembic/: env.py
backend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  entrypoint.sh  logger.py  migrate.sh  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 002_remove_priority_from_templates.py  003_add_pending_source_status.py  004_update_processing_stage_types.py  005_add_missing_processing_statuses.py  006_refactor_automation_jobs.py  007_add_trim_stage_and_skipped.py  008_create_celery_beat_tables.py  010_convert_datetime_columns_to_timezone_aware.py  012_add_external_source_and_target_types.py  015_add_uniqueness_constraints.py  019_replace_leap_dt_in_template_jsonb.py  020_widen_video_file_size_to_bigint.py  021_preset_credential_set_null.py  022_token_version_and_session_metadata.py  023_grafana_ro_role.py  024_on_air_and_pipeline_task_id.py  025_grafana_ro_stage_timings.py  026_add_download_started_at.py  027_add_credential_needs_reauth.py  028_add_email_token_fields.py  029_backfill_is_verified.py  030_add_usage_events.py  031_quota_usage_counters.py
backend/api/: __init__.py  celery_app.py  dependencies.py  main.py  token_manager.py  zoom_api.py
backend/api/auth/: admin.py  cookies.py  csrf.py  dependencies.py  device.py  encryption.py  security.py
backend/api/core/: context.py
backend/api/helpers/: beat_sync.py  leap_dt_template_migration.py  pipeline_initializer.py  schedule_converter.py  status_manager.py  template_renderer.py
backend/api/middleware/: csrf.py  error_handler.py  logging.py  rate_limit.py
backend/api/observability/: __init__.py  metrics.py
backend/api/repositories/: auth_repos.py  recording_repos.py  subscription_repos.py  template_repos.py  usage_event_repo.py
backend/api/routers/: admin.py  auth.py  automation.py  credentials.py  health.py  input_sources.py  oauth.py  output_presets.py  recordings.py  recordings_helpers.py  references.py  storage.py  tasks.py  templates.py  thumbnails.py  user_config.py  users.py
backend/api/schemas/: config_types.py  thumbnail.py  transcription.py  validators.py
backend/api/schemas/admin/: __init__.py  stats.py
backend/api/services/: automation_service.py  config_resolver.py  config_utils.py  credential_service.py  email_service.py  oauth_platforms.py  oauth_service.py  quota_service.py  stats_service.py  timing_service.py
backend/api/shared/: enums.py  exceptions.py
backend/api/tasks/: __init__.py  automation.py  base.py  maintenance.py  processing.py  template.py  upload.py
backend/assemblyai_module/: __init__.py  config.py  service.py
backend/config/: __init__.py  settings.py
backend/config/examples/: assemblyai_creds.json.example  deepseek_creds.json.example  deepseek_fireworks_creds.json.example
backend/database/: __init__.py  auth_models.py  config.py  config_models.py  manager.py  models.py  template_models.py
backend/deepseek_module/: config.py  prompts.py  topic_extractor.py
backend/docs/: ADR_FEATURES.md  ADR_OVERVIEW.md  ARCHITECTURE_SCHEMAS.md  CHANGELOG.md  DATABASE_DESIGN.md  INDEX.md  METRICS_SUMMARY.md  PRICING_ANALYSIS.md  TECHNICAL.md  UPDATES.md
backend/docs/archive/: ASR_SYSTEMS.md  PLAN.md  README.md  WHAT_WAS_DONE.md
backend/docs/dev_notes/: PLATFORM_API_RATE_LIMITING.md  README.md  RECORDING_440_INVESTIGATION.md  S3_INTEGRATION_TODO.md  pause_resume_TODO.md  transcription_retry_INFO.md
backend/docs/examples/: credentials_examples.json  generate_templates.py  hse_templates.json  preset_metadata_examples.json  template_detailed_example.json
backend/docs/guides/: AUTOMATION_CELERY_BEAT.md  BATCH_TESTING.md  CELERY_ASYNCIO_TECHNICAL.md  CELERY_WORKERS_GUIDE.md  CREDENTIAL_SECURITY.md  DEPLOYMENT.md  FIREWORKS_BATCH_API.md  JINJA_METADATA_TEMPLATES.md  MEDIA_INTEGRITY_DOWNLOAD_AND_TRIM.md  MONITORING.md  QUOTAS.md  QUOTA_AND_ADMIN_API.md  README.md  SESSIONS.md  STORAGE_STRUCTURE.md  TASK_PROGRESS_WEBSOCKET.md  TEMPLATES.md  TEMPLATES_PRESETS_SOURCES_GUIDE.md  VK_INTEGRATION.md  VK_POLICY_UPDATE_2026.md  YANDEX_DISK_GUIDE.md  YT_DLP_GUIDE.md  ZOOM_CREDS_GUIDE.md
backend/experiments/: proc_stages.csv
backend/file_storage/: __init__.py  factory.py  path_builder.py
backend/file_storage/backends/: __init__.py  base.py  local.py  s3.py
backend/fireworks_module/: __init__.py  config.py  prompts.py  service.py
backend/models/: recording.py  zoom_auth.py
backend/scripts/: celery_worker_healthcheck.py  compute_final_duration_from_files.py  diagnose_video_file.py  list_yandex_disk_folders.py  migrate_data_culture_matching_rules.py  observability_smoke.py  query_recordings.py  reencrypt_credentials.py  test_assemblyai.py  test_export_api.py  trimming_stats.py
backend/subtitle_module/: subtitle_generator.py
backend/templates/email/: base.html  email_verification.html  password_reset.html
backend/tests/: README.md  ROADMAP.md  conftest.py
backend/tests/fixtures/: __init__.py  factories.py
backend/tests/integration/: test_s3_minio_e2e.py
backend/tests/quality/: test_code_quality.py
backend/transcription_module/: __init__.py  keyterms.py  manager.py  normalize.py
backend/utils/: date_utils.py  pipeline_video_formats.py  thumbnail_manager.py
backend/video_download_module/: __init__.py  downloader.py
backend/video_download_module/core/: __init__.py  base.py
backend/video_processing_module/: audio_detector.py  config.py  segments.py  video_processor.py
backend/video_upload_module/: __init__.py  config_factory.py  credentials_provider.py  factory.py  uploader_factory.py
backend/video_upload_module/core/: __init__.py  base.py
backend/yandex_disk_module/: client.py
(+533 files in other folders)
