[project]
name = "leap"
version = "0.10.1"
description = "LEAP - Lecture Enhancement & Automation Platform for intelligent video content processing"
readme = "README.md"
license = {text = "Business Source License 1.1"}
requires-python = ">=3.14"
authors = [
    {name = "Gordey Zuev", email = "gordey.zuev@gmail.com"}
]
dependencies = [
    # Core async & HTTP
    "httpx>=0.24.0",
    "asyncpg>=0.29.0",
    # Web framework
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.11.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "email-validator>=2.1.0",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "greenlet>=3.2.4",
    # Task queue
    "celery>=5.6.1",
    "flower>=2.0.0",
    "redis>=5.0.0",
    "celery-sqlalchemy-scheduler>=0.3.0",
    # Sync psycopg required by celery-sqlalchemy-scheduler.
    # FastAPI uses asyncpg, but the beat scheduler imports psycopg2 directly.
    "psycopg2-binary>=2.9",
    "croniter>=2.0.1",
    "pytz>=2024.1",
    # Security
    "bcrypt>=5.0.0",
    "cryptography>=42.0.0",
    "PyJWT>=2.8.0",
    # CLI & UI
    "click>=8.0.0",
    "rich>=14.2.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.1.1",
    # Video processing
    "ffmpeg-python>=0.2.0",
    "yt-dlp>=2024.0.0",
    # Google/YouTube API
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",
    # VK API
    "vk-api>=11.10.0",
    # AI/Transcription
    "fireworks-ai>=0.15.15",
    "openai>=2.8.1",
    # Export
    "openpyxl>=3.1.0",
    # Dev tools
    "ruff>=0.14.1",
    "python-ulid>=3.0.0",
    "aiofiles>=25.1.0",
    "gevent>=25.9.1",
    # S3-compatible object storage
    "aioboto3>=13.0.0",
    # Observability: Prometheus instrumentation for FastAPI (RED metrics
    # exposed at /metrics, scraped by the prometheus container).
    "prometheus-fastapi-instrumentator>=7.0.0",
]

[tool.uv]
# Чтобы `uv sync` подтягивал dev (pytest и т.д.) без `uv sync --group dev`
default-groups = ["dev"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ty>=0.0.14",
    "moto[s3,server]>=5.0.0",
]

[tool.ty]
# ty configuration - extremely fast type checker

[tool.ty.environment]
# Python version for type checking
python-version = "3.14"

# Project root directories for first-party modules
root = [
    ".",
]

[tool.ty.src]
# Paths to check
include = [
    "api",
    "database",
    "models",
    "utils",
    "config",
    "video_download_module",
    "video_processing_module",
    "video_upload_module",
    "subtitle_module",
    "transcription_module",
    "deepseek_module",
    "fireworks_module",
    "file_storage",
    "yandex_disk_module",
]

# Exclude patterns (in addition to defaults)
exclude = [
    "alembic/versions",
    "tests",
]

[tool.ty.terminal]
# Output format for diagnostics
output-format = "full"

# Several modules still return plain dicts from FastAPI handlers, use SQLAlchemy ``Column``-like
# typing at ORM boundaries, or platform SDKs with imprecise stubs. Treat these as warnings so
# `ty check` (and pre-commit) stay green while types are tightened incrementally.
[tool.ty.rules]
invalid-argument-type = "warn"
invalid-return-type = "warn"
invalid-assignment = "warn"
invalid-method-override = "warn"
invalid-type-form = "warn"
no-matching-overload = "warn"

[tool.ty.analysis]
# Respect type: ignore comments (in addition to ty: ignore)
respect-type-ignore-comments = true

# Allow unresolved imports for third-party libraries that might not have stubs
allowed-unresolved-imports = []

# Override rules for test files
[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
# Relax some rules in tests
possibly-unresolved-reference = "warn"
